--- a/projects/index.html
+++ b/projects/index.html
@@ -82,7 +82,7 @@ setTimeout(() => {
   <div class="mx-auto mt-12 grid max-w-xl gap-16 lg:max-w-none lg:grid-cols-2">
       <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
         <div class="flex-shrink-0">
-          <img class="h-80 w-full object-cover" src="images/yonderbook.png" alt="" />
+          <img class="h-80 w-full object-cover" src="./images/yonderbook.png" alt="" />
         </div>
         <div class="flex flex-1 flex-col justify-between bg-white p-6">
           <div class="flex-1">
@@ -109,7 +109,7 @@ setTimeout(() => {
       </div>
       <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
         <div class="flex-shrink-0">
-          <img class="h-80 w-full object-cover" src="images/school_location_api.png" alt="" />
+          <img class="h-80 w-full object-cover" src="./images/school_location_api.png" alt="" />
         </div>
         <div class="flex flex-1 flex-col justify-between bg-white p-6">
           <div class="flex-1">
@@ -137,7 +137,7 @@ setTimeout(() => {
       </div>
       <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
         <div class="flex-shrink-0">
-          <img class="h-80 w-full object-cover" src="images/member_vote.png" alt="" />
+          <img class="h-80 w-full object-cover" src="./images/member_vote.png" alt="" />
         </div>
         <div class="flex flex-1 flex-col justify-between bg-white p-6">
           <div class="flex-1">
@@ -219,7 +219,7 @@ setTimeout(() => {
       </div>
       <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
         <div class="flex-shrink-0">
-          <img class="h-80 w-full object-cover" src="images/bodytemp.jpg" alt="" />
+          <img class="h-80 w-full object-cover" src="./images/bodytemp.jpg" alt="" />
         </div>
         <div class="flex flex-1 flex-col justify-between bg-white p-6">
           <div class="flex-1">
@@ -247,7 +247,7 @@ setTimeout(() => {
       </div>
       <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
         <div class="flex-shrink-0">
-          <img class="h-80 w-full object-cover" src="images/abalone.jpg" alt="" />
+          <img class="h-80 w-full object-cover" src="./images/abalone.jpg" alt="" />
         </div>
         <div class="flex flex-1 flex-col justify-between bg-white p-6">
           <div class="flex-1">
@@ -273,7 +273,7 @@ setTimeout(() => {
       </div>
       <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
         <div class="flex-shrink-0">
-          <img class="h-80 w-full object-cover" src="images/concert_match.jpg" alt="" />
+          <img class="h-80 w-full object-cover" src="./images/concert_match.jpg" alt="" />
         </div>
         <div class="flex flex-1 flex-col justify-between bg-white p-6">
           <div class="flex-1">
