--- a/projects/index.html
+++ b/projects/index.html
@@ -109,7 +109,7 @@ setTimeout(() => {
       </div>
       <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
         <div class="flex-shrink-0">
-          <img class="h-80 w-full object-cover" src="./images/member_vote.png" alt="" />
+          <img class="h-80 w-full object-cover" src="images/member_vote.png" alt="" />
         </div>
         <div class="flex flex-1 flex-col justify-between bg-white p-6">
           <div class="flex-1">
