--- a/community/index.html
+++ b/community/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Community &amp; volunteering | Portfolio, posts and projects</title>
+<title>Community &amp; volunteer work | Portfolio, posts and projects</title>
 <meta property="og:title" content="Stephanie A. Wilkinson" />
 <meta property="og:type" content="website" />
 <meta property="og:image" content="relative_url 'images/headshot.jpg'" />
@@ -46,27 +46,27 @@ setTimeout(() => {
   </head>
   <body class="full_width  flex h-full flex-col bg-zinc-50 dark:bg-black">
     <div class="top-0 z-10 h-16 pt-6" style="position:var(--header-position)">
-      <div class="sm:px-8 top-[var(--header-top,theme(spacing.6))] w-full" style="position:var(--header-inner-position)">
+      <div class="md:px-8 top-[var(--header-top,theme(spacing.6))] w-full" style="position:var(--header-inner-position)">
         <div class="mx-auto max-w-7xl lg:px-8 dark:text-slate-400">
-          <div class="relative px-4 sm:px-8 lg:px-12">
-    <div class="relative flex gap-4">
+          <div class="relative sm:px-8 lg:px-12">
+    <div class="relative flex md:gap-4">
       <div class="flex flex-1 justify-center">
         <nav class="pointer-events-auto ">
-          <ul class="flex rounded-full bg-white/90 px-3 text-sm font-medium text-zinc-800 shadow-lg shadow-zinc-800/5 ring-1 ring-zinc-900/5 backdrop-blur dark:bg-zinc-800/90 dark:text-zinc-200 dark:ring-white/10">
+          <ul class="flex rounded-full bg-white/90 px-1.5 md:px-3 text-sm font-medium text-zinc-800 shadow-lg shadow-zinc-800/5 ring-1 ring-zinc-900/5 backdrop-blur dark:bg-zinc-800/90 dark:text-zinc-200 dark:ring-white/10">
             <li>
-              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/">Home</a>
+              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/">Home</a>
             </li>
             <li>
-              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/community">Community</a>
+              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/community">Community</a>
             </li>
             <li>
-              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/projects">Projects</a>
+              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/projects">Projects</a>
             </li>
             <li>
-              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/presentations">Speaking</a>
+              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/presentations">Speaking</a>
             </li>
             <li>
-              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/posts">Blog</a>
+              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/posts">Blog</a>
             </li>
           </ul>
         </nav>
@@ -77,11 +77,11 @@ setTimeout(() => {
 
           <main>
             <div class="mx-auto max-w-2xl lg:max-w-7xl">
-  <h1 class="md:mt-16 text-5xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100">
-    Community &amp; volunteering
+  <h1 class="md:mt-16 m-4 text-5xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100">
+    Community &amp; volunteer work
   </h1>
-  <div class="mt-16 dark:text-slate-400 text-base text-zinc-600 space-y-4">
-    <div class="relative rounded-xl bg-indigo-500 py-24 shadow-2xl lg:grid lg:grid-cols-2 lg:gap-x-8 lg:px-16">
+  <div class="m-4 dark:text-slate-400 text-base text-zinc-600 space-y-4">
+    <div class="mt-12 relative rounded-xl bg-indigo-500 py-24 shadow-2xl lg:grid lg:grid-cols-2 lg:gap-x-8 lg:px-16">
   <div class="absolute inset-0 opacity-50 mix-blend-multiply saturate-0 filter">
     <img src="/my-site/images/rubyinhollywoodgroup.jpg" alt="" class="h-full w-full object-cover" />
   </div>
