--- a/index.html
+++ b/index.html
@@ -46,27 +46,27 @@ setTimeout(() => {
   </head>
   <body class="page  flex h-full flex-col bg-zinc-50 dark:bg-black">
     <div class="top-0 z-10 h-16 pt-6" style="position:var(--header-position)">
-      <div class="sm:px-8 top-[var(--header-top,theme(spacing.6))] w-full" style="position:var(--header-inner-position)">
+      <div class="md:px-8 top-[var(--header-top,theme(spacing.6))] w-full" style="position:var(--header-inner-position)">
         <div class="mx-auto max-w-7xl lg:px-8 dark:text-slate-400">
-          <div class="relative px-4 sm:px-8 lg:px-12">
-    <div class="relative flex gap-4">
+          <div class="relative sm:px-8 lg:px-12">
+    <div class="relative flex md:gap-4">
       <div class="flex flex-1 justify-center">
         <nav class="pointer-events-auto ">
-          <ul class="flex rounded-full bg-white/90 px-3 text-sm font-medium text-zinc-800 shadow-lg shadow-zinc-800/5 ring-1 ring-zinc-900/5 backdrop-blur dark:bg-zinc-800/90 dark:text-zinc-200 dark:ring-white/10">
+          <ul class="flex rounded-full bg-white/90 px-1.5 md:px-3 text-sm font-medium text-zinc-800 shadow-lg shadow-zinc-800/5 ring-1 ring-zinc-900/5 backdrop-blur dark:bg-zinc-800/90 dark:text-zinc-200 dark:ring-white/10">
             <li>
-              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/">Home</a>
+              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/">Home</a>
             </li>
             <li>
-              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/community">Community</a>
+              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/community">Community</a>
             </li>
             <li>
-              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/projects">Projects</a>
+              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/projects">Projects</a>
             </li>
             <li>
-              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/presentations">Speaking</a>
+              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/presentations">Speaking</a>
             </li>
             <li>
-              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/posts">Blog</a>
+              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/posts">Blog</a>
             </li>
           </ul>
         </nav>
@@ -76,7 +76,7 @@ setTimeout(() => {
 </div>
 
           <main>
-            <div class="mt-16 grid grid-cols-1 gap-y-16 lg:grid-cols-2 lg:gap-y-12 mx-auto max-w-2xl lg:max-w-7xl">
+            <div class="md:mt-16 mt-4 px-8 grid grid-cols-1 gap-y-16 lg:grid-cols-2 lg:gap-y-12 mx-auto max-w-2xl lg:max-w-7xl">
   <div class="">
     <h1 class="text-6xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-6xl">
       Stephanie Wilkinson
@@ -160,6 +160,8 @@ setTimeout(() => {
 
   </div>
 </div>
+
+
 
           </main>
         </div>
