--- a/projects/bodytemp/index.html
+++ b/projects/bodytemp/index.html
@@ -44,7 +44,7 @@ setTimeout(() => {
 </script>
 
   </head>
-  <body class="full_width  flex h-full flex-col bg-zinc-50 dark:bg-black">
+  <body class="bg-gradient-to-r from-[#f7e9e2] to-[#dadef1] dark:to-zinc-800 dark:from-slate-800 full_width  flex h-full flex-col">
     <div class="top-0 z-10 h-16 pt-6" style="position:var(--header-position)">
       <div class="md:px-8 top-[var(--header-top,theme(spacing.6))] w-full" style="position:var(--header-inner-position)">
         <div class="mx-auto max-w-7xl lg:px-8 dark:text-slate-400">
@@ -52,7 +52,7 @@ setTimeout(() => {
     <div class="relative flex md:gap-4">
       <div class="flex flex-1 justify-center">
         <nav class="pointer-events-auto ">
-          <ul class="flex rounded-full bg-white/90 px-1.5 md:px-3 text-sm font-medium text-zinc-800 shadow-lg shadow-zinc-800/5 ring-1 ring-zinc-900/5 backdrop-blur dark:bg-zinc-800/90 dark:text-zinc-200 dark:ring-white/10">
+          <ul class="flex rounded-full bg-white/80 px-1.5 md:px-3 text-sm font-medium text-zinc-800 shadow-lg shadow-zinc-800/5 ring-1 ring-zinc-900/5 backdrop-blur dark:bg-zinc-800/90 dark:text-zinc-200 dark:ring-white/10">
             <li>
               <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/">Home</a>
             </li>
